<resources>
    <string name="app_name">Test_Toasty</string>
    <string name="Error_Message">this is an error message</string>
    <string name="Warning_Message">this is a warning message</string>
    <string name="Success_Message">this is a success message</string>
    <string name="Imformation_Message">this is  Information toasty</string>
    <string name="toasty_examples_label">Toasty Examples</string>
    <string name="button_warning">Warning</string>
    <string name="button_error">Error</string>
    <string name="button_info">Info</string>
    <string name="button_success">Success</string>
</resources>
