<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mrdroid.test_toasty.MainActivity">

    <TextView
        android:id="@+id/tv1"
        style="@style/TextViewStyle"
        android:text="@string/toasty_examples_label"
        android:textColor="@color/colorAccent"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        />

    <Button
        android:id="@+id/button_error"
        style="@style/buttonStyle"
        android:text="@string/button_error"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="showErrorToasty"/>

    <Button
        android:id="@+id/button_warning"
        style="@style/buttonStyle"
        android:text="@string/button_warning"
        app:layout_constraintTop_toBottomOf="@+id/button_error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="showWarningToasty"/>


    <Button
        android:id="@+id/button_success"
        style="@style/buttonStyle"
        android:text="@string/button_success"
        app:layout_constraintTop_toBottomOf="@+id/button_warning"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="showSuccessToasty"/>


    <Button
        android:id="@+id/button_info"
        style="@style/buttonStyle"
        android:text="@string/button_info"
        app:layout_constraintTop_toBottomOf="@+id/button_success"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="showInfoToasty"/>


</android.support.constraint.ConstraintLayout>
